samples/_failures_safe/1761639904_437281_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_da9e72f4.c: In function ‘main’:
./samples/SAFE/__tmp_da9e72f4.c:139:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  139 |     struct LogAnalyzer analyzer
      |            ^~~~~~~~~~~
./samples/SAFE/__tmp_da9e72f4.c:139:12: error: expected declaration or statement at end of input
